// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.panelmatch.protocol;

option java_package = "org.wfanet.panelmatch.protocol";
option java_multiple_files = true;

// TODO: Replace this in the measurement api with something to support signed
// shared inputs
message SharedInputs {
  repeated bytes data = 1;
}

message NamedSignature {
  bytes signature = 1;
  // The API resource name of the certificate that provided this signature
  string certificate_name = 2;
}
